--- a/css/WebsiteCSS.css
+++ b/css/WebsiteCSS.css
@@ -1,25 +1,71 @@
-// Set the body and the html to have no padding, borders or margin.
+/*! Set the body and the html to have no padding, borders or margin.*/
 body {
   margin: 0px;
   padding: 0px;
   padding-top: 70px;
   border: 0px;
+  background-color: burlywood;
 }
-
-// Style the main navigation to be displayed at the top of the page.
-.MainNavigation{
-  display: inline-block !important;
-  font-size: 18px;
+/*! Move the text in the navbar to the centre*/
+.container-fluid{
+ margin-left: 41%;
 }
-
-// Set the sidebar to be a certain width and to always display on the left.
+/*! Set the sidebar to be a certain width and to always display on the left.*/
 .sidebar{
-  min-width: 30px;
-  max-width: 90px;
+  float: right;
+  max-height: 100%;
+  min-width: 25%;
+  max-width: 25%;
+  margin-left: 10px;
+  padding: 10px;
+  background-color: antiquewhite;
 }
 
+.ShareButtons img{
+  width: 40px;
+  border: 0px;
+  box-shadow: 0;
+  display: inline;
+}
 
-// Size the picture to 20% of width.
+/**********************!
+*      HOME PAGE       *
+***********************/
+
+/*! Style the photo on the home page.*/
 #N-S-L_Photo{
-  max-width: 10%;
+  width: 95%;
+  height: 95%;
+  margin-left: 10px;
+  margin-top: : 10px;
 }
+/*! Style the username under the photo.*/
+#username{
+  margin-left: 39%;
+  font-size: large;
+}
+/*! Style the div that the username is contained in.*/
+#usernameDiv{
+  padding-bottom: 50px;
+}
+/*! make the summary appear on the left of the aside.*/
+#InsideSummary{
+  margin-left: 50px;
+  padding-left: 50px;
+}
+
+/*! make the social links apear in the centre.*/
+#SocialLinksDiv{
+  padding-top: 10px;
+  margin-left: 29%;
+}
+
+/**********************!
+*    Portfolio PAGE   *
+***********************/
+
+
+
+/**********************!
+*     CONTACT PAGE     *
+***********************/
