--- a/css/WebsiteCSS.css
+++ b/css/WebsiteCSS.css
@@ -1,19 +1,28 @@
 /*! Set the body and the html to have no padding, borders or margin.*/
 body {
-  margin: 0px;
+  margin: 0 auto;;
   padding: 0px;
   padding-top: 70px;
   border: 0px;
+  box-sizing: border-box;
   background-color: burlywood;
 }
 /*! Move the text in the navbar to the centre*/
 .container-fluid{
- margin-left: 41%;
+ /*margin-left: 41%;*/
 }
+
+.navbar-header {
+  
+}
+
+.maincontent {
+
+}
+
 /*! Set the sidebar to be a certain width and to always display on the left.*/
 .sidebar{
   float: right;
-  max-height: 100%;
   min-width: 25%;
   max-width: 25%;
   margin-left: 10px;
@@ -26,6 +35,14 @@ body {
   border: 0px;
   box-shadow: 0;
   display: inline;
+}
+
+.clearfix:after {
+  content: “.”; display: block; height: 0; clear: both;, visibility: hidden;
+  }
+
+.clearfix{
+  display: inline-block;
 }
 
 /**********************!
